--- a/.gitignore
+++ b/.gitignore
@@ -5,10 +5,20 @@ yarn-debug.log*
 yarn-error.log*
 
 # Environment variables
+.env
 .env.local
+.env*.local
 .env.development.local
 .env.test.local
 .env.production.local
+
+# Files with potential secrets
+vercel-env.txt
+env-vercel.txt
+env-config.txt
+*.key
+*.pem
+google-key.json
 
 # Next.js
 .next/
