--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.90.1",
     "@tailwindcss/postcss": "^4.1.18",
-    "emailjs-com": "^3.2.0",
+    "@emailjs/browser": "^4.4.1",
     "google-auth-library": "^10.5.0",
     "google-spreadsheet": "^5.0.2",
+    "lucide-react": "^0.562.0",
     "next": "^16.1.1",
+    "node-fetch": "^3.3.2",
     "react": "^19.2.3",
     "react-dom": "^19.2.3"
   },
