--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@supabase/supabase-js": "^2.90.1",
     "@tailwindcss/postcss": "^4.1.18",
     "csv-parse": "^6.1.0",
+    "dotenv": "^17.2.3",
     "google-auth-library": "^10.5.0",
     "google-spreadsheet": "^5.0.2",
     "lucide-react": "^0.562.0",
