--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@supabase/supabase-js": "^2.90.1",
     "@tailwindcss/postcss": "^4.1.18",
     "@types/react-window": "^1.8.8",
+    "@vercel/analytics": "^1.6.1",
+    "@vercel/speed-insights": "^1.3.1",
     "csv-parse": "^6.1.0",
     "dotenv": "^17.2.3",
     "google-auth-library": "^10.5.0",
@@ -30,7 +32,8 @@
     "node-fetch": "^3.3.2",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
-    "react-window": "^2.2.5"
+    "react-window": "^2.2.5",
+    "use-debounce": "^10.1.0"
   },
   "devDependencies": {
     "@types/node": "^25.0.6",
