--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "react-window": "^2.2.5",
+    "swr": "^2.3.8",
     "use-debounce": "^10.1.0"
   },
   "devDependencies": {
